# darkmatter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md
cmake_modules/: FindCPPFORMAT.cmake  FindDevIL.cmake  FindFreeType.cmake  FindGLEW.cmake  FindSDL2.cmake
src/: main.cpp
src/Animation/: Animation.cpp  Animation.hpp
src/Components/: AnimationComponent.cpp  AnimationComponent.hpp  BodyComponent.hpp  Cursor.hpp  PhysicsComponent.hpp  PlayerComponent.hpp  RenderComponent.cpp  RenderComponent.hpp
src/Core/: Component.cpp  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameState.hpp  Logger.cpp  Logger.hpp  Manager.cpp  Manager.hpp  ObjectPool.hpp  Prototype.hpp  System.cpp  System.hpp  TimerSystem.hpp
src/Event/: Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventHandler.cpp  EventHandler.hpp
src/Graphics/: BufferObject.cpp  BufferObject.hpp  Camera.cpp  Camera.hpp  RenderSystem.cpp  RenderSystem.hpp  Shader.cpp  Shader.hpp  Spritebatch.cpp  Spritebatch.hpp  VertexObject.cpp  VertexObject.hpp  World.cpp  World.hpp
src/Input/: InputSystem.cpp  InputSystem.hpp  PlayerManager.cpp  PlayerManager.hpp
src/Json/: JsonNode.cpp  JsonNode.hpp  JsonReader.cpp  JsonReader.hpp  JsonWriter.cpp  JsonWriter.hpp
src/Math/: Math.hpp  Matrix4.hpp  Quaternion.hpp  Rectangle.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
src/Resource/: Font.cpp  Font.hpp  ResourceManager.cpp  ResourceManager.hpp  Texture.cpp  Texture.hpp
src/Serialize/: Serializer.cpp  Serializer.hpp
src/System/: Window.cpp  Window.hpp
src/TypeId/: Any.hpp  TypeId.cpp  TypeId.hpp
src/Util/: Memory.hpp  Singleton.hpp  memory_test.cpp
